src/cses/sum_of_two_values/clang-tidy.txt
1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/sum_of_two_values/sum_of_two_values.cpp.
/Users/michael/repos/competitive-programming/src/cses/sum_of_two_values/sum_of_two_values.cpp:3:10: error: 'algorithm' file not found [clang-diagnostic-error]
    3 | #include <algorithm>
      |          ^~~~~~~~~~~
Found compiler error(s).
